# ABC123

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/client/: Cargo.toml  index.html
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: economy.rs  lib.rs  math.rs  orbit.rs  planet.rs  production.rs  research.rs  resource.rs  system.rs  time.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql
crates/server/src/: db.rs  main.rs
docs/: DESIGN.md  Oekonomie-und-System-Ebene.md  TODO.md  forschung.md  strukturen.md
